# cppdemo

./: README.md
src/ccallcpp/: Makefile  main.c  person.cpp  person.h  wrapper.cpp  wrapper.h
src/cmake-protobuf/: CMakeLists.txt  README.md  compile.sh
src/cmake-protobuf/include/: person.h
src/cmake-protobuf/proto/: test.proto
src/cmake-protobuf/src/: main.cpp  person.cpp
src/cmake-staticlibrary/: README.md  compile.sh
src/cmake-staticlibrary/src/: CMakeLists.txt  main.cpp
src/cmake-staticlibrary/src/mul/: CMakeLists.txt  mul.cpp  mul.h
src/cmake-staticlibrary/src/mul/add/: CMakeLists.txt  add.cpp  add.h
src/curljson/: CMakeLists.txt  README.md
src/curljson/include/: info.h
src/curljson/include/curl/: Makefile
src/curljson/src/: http.cpp  info.cpp  server.go
src/curljson/tools/: compile.sh
src/grpcdemo/: CMakeLists.txt  README.md
src/gtestdemo/: AUTHORS  CMakeLists.txt  README.md
src/gtestdemo/include/: sample.h
src/gtestdemo/src/: CMakeLists.txt  main.cpp  sample.cpp
src/gtestdemo/test/: CMakeLists.txt  main.cpp  sample_test.cpp
src/mybox/: CMakeLists.txt  README.md
src/mybox/include/: base64.h  encrypt.h  file.h  split.h  utils.h
src/mybox/src/: base64.cpp  encrypt.cpp  file.cpp  main.cpp  split.cpp  utils.cpp
